--- a/webapp/style/table.scss
+++ b/webapp/style/table.scss
@@ -58,8 +58,6 @@ $tableRowsHeight: calc(100% - 77px);
 
 .table__row-header {
   @extend .table__row;
-  border-right: none;
-  border-left: none;
   border-bottom-width: 2px;
   font-weight: 600;
   background-color: rgba($blueLight, 0.35);
